# termbackup

./: .editorconfig  .git_committers.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  git_purge.ps1  plugins_err.txt  pyproject.toml  termbackup_plugin_compress.py  termbackup_plugin_stats.py  watchflow_readme_ref.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
termbackup/: __init__.py  __main__.py  archive.py  audit.py  backup.py  cli.py  config.py  credentials.py  crypto.py  daemon.py  diff.py  doctor.py  engine.py  errors.py  github.py  incremental.py  ledger.py  listing.py  manifest.py  models.py  plugins.py  profile.py  restore.py  retention.py  rotate_key.py  rotation.py  schedule.py  scheduler.py  signing.py  tags.py  token_validator.py  ui.py  utils.py  verify.py  webhooks.py
termbackup/bundled_plugins/: termbackup_plugin_auto.py  termbackup_plugin_export.py  termbackup_plugin_hologram.py  termbackup_plugin_notify.py  termbackup_plugin_shred.py  termbackup_plugin_stats.py  termbackup_plugin_strict_audit.py  termbackup_plugin_telemetry.py  termbackup_plugin_tui.py
tests/: __init__.py  conftest.py  test_archive.py  test_backup.py  test_cli_integration.py  test_config.py  test_config_token.py  test_credentials.py  test_crypto.py  test_crypto_properties.py  test_diff.py  test_doctor.py  test_e2e.py  test_engine.py  test_errors.py  test_github.py  test_ledger.py  test_listing.py  test_manifest.py  test_new_commands.py  test_restore_mod.py  test_rotation.py  test_scheduler.py  test_signing.py  test_token_validator.py  test_ui.py  test_utils.py  test_verify_mod.py  test_webhooks.py
