[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termbackup"
version = "2.0.0"
description = "Secure cloud-backed backup CLI using GitHub as storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "TermBackup" }
]
keywords = ["backup", "cli", "encryption", "github", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
termbackup = "termbackup.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["termbackup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
