[tool.poetry]
name = "termbackup"
version = "6.0.0"
description = "Zero-Trust Encrypted GitHub Backup CLI"
authors = ["ScorpioCodeX <scorpiocodex0@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scorpiocodex/Termbackup"
repository = "https://github.com/scorpiocodex/Termbackup"
documentation = "https://github.com/scorpiocodex/Termbackup#readme"
keywords = ["backup", "encryption", "github", "cli", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [{include = "termbackup"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.12.0"
rich = "^13.7.0"
cryptography = "^42.0.5"
httpx = {version = "^0.27.0", extras = ["http2"]}
pathspec = "^0.12.0"
keyring = ">=25.0.0"
pydantic = "^2.6.0"
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.15.1"
pytest-cov = "^5.0.0"
mypy = "^1.8.0"
ruff = ">=0.4.0"
hypothesis = "^6.100.0"
bandit = {version = "^1.8.0", extras = ["toml"]}
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
termbackup = "termbackup.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S603", "S607", "S101", "S108", "S110", "S112", "S105",
    "B904", "B008", "SIM115", "SIM117", "SIM102", "SIM105", "B017", "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests"]
